Add reflection and edit

--- a/docs/Object Creator final report/object creator final report.tex
+++ b/docs/Object Creator final report/object creator final report.tex
@@ -128,7 +128,7 @@ This requirement is met while we didn’t create a menu for manipulation methods
 
 5.	Importing image—importers would be able to add local image to canvas.
 
-This requirement is met and was very helpful during implementation of this function. The flow of events are properly wrote and with enough details.
+This requirement is met and was very helpful during implementation of this function. The flow of events are properly wrote with enough details.
 \\
 
 \textbf {Non-functional Requirement:} \\*
@@ -141,6 +141,7 @@ This requirement is met and was very helpful during implementation of this funct
 This requirement is partially met. The object-creator module would be available whenever the users log into systems given that the server is already connected. The module shall not fail for most of cases based on individual tests.\\
 
 2.	Usability:
+
 -The users are not expected to have any knowledge of or previous experience programming.
 -For users with basic computer operation ability, the average time of learning the facilities of the module independently should be no more than one hour.
 Ten minutes of training before independent use is possible.
@@ -283,6 +284,13 @@ If I was to do this project over again I would have scrapped the entire set-up a
 
 
 \subsection{Dongni}
+The biggest challenge I encountered during development is to realize the function that allows users to manipulate the objects. It was unexpectedly complex using the html canvas and I got stuck there for at least one week. I ended up seeking help from group members and searching for other available JavaScript canvas framework. By the time I realized that the KineticJS could be of good help to many of the manipulation/layering functions and we should have implemented it in early stage, half of our work was already done on the html generic canvas. Thus much extra work was required to translate codes and my hesitation even wasted more time. Besides, I felt really bad for having my group members change existed code and adapt to the new framework. In future I would definitely communicate better with group members and express my concerns without too much hesitation. Expressing concerns and actually talking to co-workers is a most significant part of collaborative programing.
+
+During the development of our module I did not really apply any software engineering techniques. I got a feeling that most of my work was neither done with plan-driven nor agile approach, but more likely “deadline-driven” approach. The requirements did help but they have been revised a lot during the implementation process. And we did not get enough feedbacks from the module users either. 
+
+If I were to start this project over again, I would firstly talk more with our customer (in this case, Joel) to get a better idea of what the ideal product would be like. According to the customer expectation and enough research on whether these goals are reachable or not, I would communicate more with group members and come up with the requirement together. And most importantly, we should decide on the platforms before actually start coding. If I were to continue working on the project, I would try to follow the plans we made and communicate more with group members to keep track of our process.
+
+
 
 
 \subsection{Darren}
