--- a/docs/Object Creator final report/object creator final report.tex
+++ b/docs/Object Creator final report/object creator final report.tex
@@ -131,7 +131,7 @@ This requirement is met while we didn’t create a menu for manipulation methods
 This requirement is met and was very helpful during implementation of this function. The flow of events are properly wrote with enough details.
 \\
 
-\textbf {Non-functional Requirement:} \\*
+\textbf {Non-functional Requirement:} 
 
 1. 	Availability:
 
@@ -288,7 +288,7 @@ The biggest challenge I encountered during development is to realize the functio
 
 During the development of our module I did not really apply any software engineering techniques. I got a feeling that most of my work was neither done with plan-driven nor agile approach, but more likely “deadline-driven” approach. The requirements did help but they have been revised a lot during the implementation process. And we did not get enough feedbacks from the module users either. 
 
-If I were to start this project over again, I would firstly talk more with our customer (in this case, Joel) to get a better idea of what the ideal product would be like. According to the customer expectation and enough research on whether these goals are reachable or not, I would communicate more with group members and come up with the requirement together. And most importantly, we should decide on the platforms before actually start coding. If I were to continue working on the project, I would try to follow the plans we made and communicate more with group members to keep track of our process.
+If I were to start this project over again, I would firstly talk more with our customer (in this case, Joel) to get a better idea of what the ideal product would be like. According to the customer expectation and enough research on whether these goals are reachable or not, I would communicate more with group members and come up with the requirement together. And most importantly, we should decide on the platforms before actually start coding. If I were to continue working on the project, I would try to follow the plans we made and communicate more with group members.
 
 
 
@@ -308,9 +308,7 @@ Also, it would have been nice to had met with all of the groups earlier and more
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 
-\bibliographystyle{unsrt}
-\newpage
-\section*{Bibliography}
+
 
 
 %----------------------------------------------------------------------------------------
